# rust-dev-traveling

./: Cargo.toml
axum-dev-traveling/: Cargo.toml
axum-dev-traveling/examples/: generate_random_number.rs  hello.rs
sqlx-postgresql/: .env  Cargo.toml  test.http
sqlx-postgresql/migrations/: 20240303055623_init.down.sql  20240303055623_init.up.sql
sqlx-postgresql/src/: db.rs  lib.rs  main.rs  routing.rs
