[package]
name = "axum-dev-traveling"
version = "0.1.0"
edition = "2021"

[[example]]
name = "hello"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
