[package]
name = "axum-dev-traveling"
version = "0.1.0"
edition = "2021"

[[example]]
name = "hello"

[[example]]
name = "generate_random_number"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
derive = "1.0.0"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
