[package]
name = "sqlx-postgresql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros", "json"] }
dotenv = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.3", features = [
    "runtime-tokio-rustls",
    "any",
    "postgres",
] }
tokio = { version = "1.36.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.5.2", features = ["add-extension", "trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
